[gd_scene load_steps=10 format=2]

[ext_resource path="res://line_node.gd" type="Script" id=1]
[ext_resource path="res://line_node/line_node.png" type="Texture" id=2]
[ext_resource path="res://line_node/line_node_hover.png" type="Texture" id=3]
[ext_resource path="res://line_node/line_node_activated.png" type="Texture" id=4]
[ext_resource path="res://screens/edit_mode_anchor.png" type="Texture" id=5]
[ext_resource path="res://fonts/04B_03B_.TTF" type="DynamicFontData" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 3
outline_color = Color( 0.333333, 0.333333, 0.333333, 0.666667 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 6 )

[node name="line_node" type="Area2D"]
position = Vector2( 205.485, 473.003 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.898039, 0.835294, 0.313726, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite_activated" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Sprite_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Sprite_anchor" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.615686 )
z_index = 100
texture = ExtResource( 5 )

[node name="labels" type="Node2D" parent="."]
z_index = 1000

[node name="node_label" type="Label" parent="labels"]
margin_left = 7.0
margin_top = 7.0
margin_right = 49.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "node label"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="order_label" type="Label" parent="labels"]
margin_right = 3.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.972549, 0.972549, 0.972549, 0.392157 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_shape_entered" from="." to="." method="_on_line_node_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_line_node_area_shape_exited"]
